[tool.poetry]
name = "miko-analyzer"
version = "0.0.0"
description = "Analyzing tool for deep learning based chemical research."
authors = ["Cloudac7 <scottryuu@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cloudac7/miko-analysis"
packages = [{include = "miko_analyzer"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
ase = "^3.21.1"
matplotlib = "<=3.4.3"
numpy = "<1.24,>=1.18"
llvmlite  = "^0.39.0"
numba = "^0.56.0"
pandas = "^1.3.3"
dpdata = "*"
dscribe = "*"
dynaconf = "*"
mdanalysis = "^2.2"
scipy = "^1.10.1"
seaborn = "*"
proplot = "^0.9.7"
tqdm = "^4.65.0"

[tool.poetry.group.test.dependencies]
flake8 = "*"
pytest = "*"
pytest-mock = "*"
pytest-datadir = "*"
coverage = "*"
coveralls = "*"

[tool.poetry.group.docs.dependencies]
mkdocstrings = { version = ">=0.18", extras = ["python"] }
mkdocs-material = "*"
mike = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"

[tool.poetry.scripts]
miko = 'miko.cmdline.base:cli'

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
