[tool.poetry]
name = "miko-tasker"
version = "0.0.0"
license = "Apache-2.0"
description = "Tasking plugin for Miko-Analyzer."
authors = [
    "Cloudac7 <scottryuu@outlook.com>"
]
readme = "README.md"
packages = [{include = "miko_tasker"}]
repository = "https://github.com/cloudac7/miko-tasker"

[tool.poetry.dependencies]
python = "<3.12, >=3.8"
ase = "*"
click = "*"
dscribe = "*"
dpdata = "*"
dpdispatcher = "^0.5.6"
dpgen = "^0.11.1"
dynaconf = "*"
miko-analyzer = "^0.3.0"
numpy = "^1.18"
pymatgen = "*"
pyyaml = "*"
mdanalysis = ">=2.2.0"


[tool.poetry.group.test.dependencies]
flake8 = "*"
pytest = "*"
pytest-mock = "*"
pytest-datadir = "*"
coverage = "*"
pytest-asyncio = "^0.21.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
secondary = true

[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = false
secondary = true

[tool.poetry.plugins]

[tool.poetry.plugins."miko.cmdline"]
"tasker_cli" = "miko_tasker.cmdline.base:tasker_cli"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"