[tool.poetry]
name = "catflow"
version = "0.5.0"
description = "Analyzing tool for deep learning based chemical research."
authors = ["Cloudac7 <scottryuu@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/chenggroup/CatFlow"
packages = [{include = "catflow"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
ase = "^3.21.1"
click = "*"
dpdata = "*"
dpdispatcher = "^0.5.6"
dpgen = "^0.11.1"
dynaconf = "*"
matplotlib = "^3.7.1"
numpy = "<1.24,>=1.18"
pandas = "^1.3.3"
dscribe = "^1.2.2"
mdanalysis = "^2.2"
scipy = "^1.10.1"
seaborn = "^0.12.2"
pymatgen = "^2023.5.10"
ai2-kit = ">=0.9.0"
fire = "^0.5.0"
ruamel-yaml = ">=0.17.21,<0.18.0"
h5py = "^3.10.0"

[tool.poetry.group.test.dependencies]
flake8 = "*"
pytest = "*"
pytest-mock = "*"
pytest-datadir = "*"
coverage = "*"
coveralls = "*"

[tool.poetry.group.docs.dependencies]
mkdocstrings = { version = ">=0.18", extras = ["python"] }
mkdocs-material = "*"
mike = "*"
mkdocs-gen-files = "*"
mkdocs-literate-nav = "^0.5.0"
mkdocs-section-index = "*"
mkdocs-jupyter = "^0.24.2"

[tool.poetry.scripts]
catflow = 'catflow.cmdline.base:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
